update project page

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,33 +19,31 @@
     <section class="main-content">
       <a id="mycontent"></a>
 
-      <!-- Course Project 1 -->
-      <div id="twosided">
-        <div id="left" style="float: left; max-width: 40%; margin-right: 20px; border: 1px solid #ccc;"> 
-          <img src="images/project1.png" alt="Project 1" style="width: 100%;" />
+    <!-- Project 1 -->
+    <div id="twosided">
+        <div id="left" style="float: left; max-width: 30%; margin-right: 20px; border: 0px solid #ccc;"> 
+        <img src="images/project1.png" alt="Project 1" style="width: 90%;" />
         </div>
-        <div id="right" style="float: right; max-width: 55%">
-          <p><strong>Project 1: Data Visualization</strong></p>
-          <p>This project focused on creating interactive data visualizations using D3.js to represent large datasets effectively. The visualizations helped provide meaningful insights through graphical representations such as bar charts, scatter plots, and histograms.</p>
+        <div id="right" style="float: right; max-width: 65%;">
+        <p><strong>Project 1: Learning Algebraic Variety through Optimization</strong></p>
+        <p>In this project, we applied numerical linear algebra techniques on a multivariate Vandermonde matrix to identify the generator of the vanishing ideal, successfully reconstructing the true algebraic variety on which the data points lie. Additionally, we designed and implemented the iterative optimization algorithm, focusing on Sequential Quadratic Programming, to accurately determine vanishing polynomials, even in the presence of noisy data. <a href="https://github.com/273A-project/273A-Project">Project page.</a> </p>
         </div>
-      </div>
-
-      <!-- Clear floats -->
-      <div style="clear: both;"></div>
-
-      <!-- Course Project 2 -->
-      <div id="twosided" style="margin-top: 30px;">
-        <div id="left" style="float: left; max-width: 40%; margin-right: 20px; border: 1px solid #ccc;"> 
-          <img src="images/project2.png" alt="Project 2" style="width: 100%;" />
+    </div>
+    
+    <div style="clear: both;"></div>
+    
+    <!-- Project 2 -->
+    <div id="twosided" style="margin-top: 30px;">
+        <div id="left" style="float: left; max-width: 30%; margin-right: 20px; border: 0px solid #ccc;"> 
+        <img src="images/project2.png" alt="Project 2" style="width: 90%;" />
         </div>
-        <div id="right" style="float: right; max-width: 55%">
-          <p><strong>Project 2: Machine Learning Model</strong></p>
-          <p>This project involved building a machine learning model to classify images using convolutional neural networks (CNN). The dataset was pre-processed and trained using TensorFlow, achieving a high accuracy rate on test data.</p>
+        <div id="right" style="float: right; max-width: 65%;">
+        <p><strong>Project 2: Reinforcement Learning with Mountain Car Game</strong></p>
+        <p>In a group of four, we take a deep-dive into RL learning applied to a simple mountain car game with low-dimensional action and state spaces. We utilize this environment to study the effects of various state-of-the-art RL methods, explore the best parameters utilizing an epsilon-greedy policy scheme, and compare the results through graphical visualizations. <a href="https://github.com/oscaro00/Math156_Project">Project page.</a></p>
         </div>
-      </div>
-
-      <!-- Clear floats -->
-      <div style="clear: both;"></div>
+    </div>
+    
+    <div style="clear: both;"></div>
 
       <!-- Add more projects similarly -->
 
