--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -26,7 +26,7 @@
         </div>
         <div id="right" style="float: right; max-width: 65%;">
         <p><strong>Project 1: Learning Algebraic Variety through Optimization</strong></p>
-        <p>In this project, we applied numerical linear algebra techniques on a multivariate Vandermonde matrix to identify the generator of the vanishing ideal, successfully reconstructing the true algebraic variety on which the data points lie. Additionally, we designed and implemented the iterative optimization algorithm, focusing on Sequential Quadratic Programming, to accurately determine vanishing polynomials, even in the presence of noisy data. <a href="https://github.com/273A-project/273A-Project">Project page.</a> </p>
+        <p>We applied numerical linear algebra techniques on a multivariate Vandermonde matrix to identify the generator of the vanishing ideal, reconstructing the true algebraic variety on which the data points lie. Additionally, we designed and implemented the iterative optimization algorithm, focusing on Sequential Quadratic Programming, to accurately determine vanishing polynomials, even in the presence of noisy data. <a href="https://github.com/273A-project/273A-Project">Project page.</a> </p>
         </div>
     </div>
     
