--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,10 +22,10 @@
     <!-- Project 1 -->
     <div id="twosided">
         <div id="left" style="float: left; max-width: 30%; margin-right: 20px; border: 0px solid #ccc;"> 
-        <img src="images/project1.png" alt="Project 1" style="width: 90%;" />
+        <img src="images/project1.png" alt="Project 1" style="width: 100%;" />
         </div>
         <div id="right" style="float: right; max-width: 65%;">
-        <p><strong>Project 1: Learning Algebraic Variety through Optimization</strong></p>
+        <p><strong>Title: Learning Algebraic Variety through Optimization</strong></p>
         <p>We applied numerical linear algebra techniques on a multivariate Vandermonde matrix to identify the generator of the vanishing ideal, reconstructing the true algebraic variety on which the data points lie. Additionally, we designed and implemented the iterative optimization algorithm, focusing on Sequential Quadratic Programming, to accurately determine vanishing polynomials, even in the presence of noisy data. <a href="https://github.com/273A-project/273A-Project">Project page.</a> </p>
         </div>
     </div>
@@ -35,10 +35,10 @@
     <!-- Project 2 -->
     <div id="twosided" style="margin-top: 30px;">
         <div id="left" style="float: left; max-width: 30%; margin-right: 20px; border: 0px solid #ccc;"> 
-        <img src="images/project2.png" alt="Project 2" style="width: 90%;" />
+        <img src="images/project2.png" alt="Project 2" style="width: 100%;" />
         </div>
         <div id="right" style="float: right; max-width: 65%;">
-        <p><strong>Project 2: Reinforcement Learning with Mountain Car Game</strong></p>
+        <p><strong>Title: Reinforcement Learning with Mountain Car Game</strong></p>
         <p>In a group of four, we take a deep-dive into RL learning applied to a simple mountain car game with low-dimensional action and state spaces. We utilize this environment to study the effects of various state-of-the-art RL methods, explore the best parameters utilizing an epsilon-greedy policy scheme, and compare the results through graphical visualizations. <a href="https://github.com/oscaro00/Math156_Project">Project page.</a></p>
         </div>
     </div>
